#64174: performance improvements for EditableProperties. Also fixing no-arg constructor to behave as documented (no auto sorting).